@@ -1813,35 +1813,34 @@ int main(int argc,char **argv)
             }
           if (LocaleNCompare("type",option+1,4) == 0)
             {
+              image_info->type=UndefinedType;
               if (*option == '-')
                 {
-                  ImageType
-                    image_type;
-
                   i++;
                   if (i == argc)
                     MagickError(OptionError,"Missing type",option);
                   option=argv[i];
-                  image_type=UndefinedType;
                   if (LocaleCompare("Bilevel",option) == 0)
-                    image_type=BilevelType;
+                    image_info->type=BilevelType;
                   if (LocaleCompare("Grayscale",option) == 0)
-                    image_type=GrayscaleType;
+                    image_info->type=GrayscaleType;
                   if (LocaleCompare("GrayscaleMatte",option) == 0)
-                    image_type=GrayscaleMatteType;
+                    image_info->type=GrayscaleMatteType;
                   if (LocaleCompare("Palette",option) == 0)
-                    image_type=PaletteType;
+                    image_info->type=PaletteType;
                   if (LocaleCompare("PaletteMatte",option) == 0)
-                    image_type=PaletteMatteType;
+                    image_info->type=PaletteMatteType;
                   if (LocaleCompare("TrueColor",option) == 0)
-                    image_type=TrueColorType;
+                    image_info->type=TrueColorType;
                   if (LocaleCompare("TrueColorMatte",option) == 0)
-                    image_type=TrueColorMatteType;
+                    image_info->type=TrueColorMatteType;
                   if (LocaleCompare("ColorSeparation",option) == 0)
-                    image_type=ColorSeparationType;
+                    image_info->type=ColorSeparationType;
                   if (LocaleCompare("ColorSeparationMatte",option) == 0)
-                    image_type=ColorSeparationMatteType;
-                  if (image_type == UndefinedType)
+                    image_info->type=ColorSeparationMatteType;
+                  if (LocaleCompare("Optimize",option) == 0)
+                    image_info->type=OptimizeType;
+                  if (image_info->type == UndefinedType)
                     MagickError(OptionError,"Invalid image type",option);
                 }
               break;
