@@ -6,7 +6,7 @@
    <meta name="keywords" content="ImageMagick, Image Magick, Image Magic,  PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel  Magic, WebMagick, Web Magic, visualization, image processing,  software development, simulation, image, software, AniMagick,  Animagic, Magick++">
    <meta name="GENERATOR" content="Mozilla/4.72 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
    <title>How to Subscribe to the ImageMagick Mailing List</title>
-<link rev="made" href="mailto:magick@imagemagick.org">
+<link rev="made" href="mailto:magick-user@imagemagick.org">
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#1F00FF" vlink="#9900DD" alink="#FF0000">
 
