@@ -1037,7 +1037,7 @@ OilPaint, CharcoalDrawing, JPEG}&nbsp;</td>
   <tr>
  <td>type</td>
   <td>{Bilevel, Grayscale, GrayscaleMatte, Palette, PaletteMatte, TrueColor, 
-TrueColorMatte, ColorSeparation, ColorSeparationMatte }</td>
+TrueColorMatte, ColorSeparation, ColorSeparationMatte, Optimize }</td>
   <td>image type</td>
  </tr>
   <tr>
